kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend
  namespace: vendor-invoice

spec:
  replicas: 2

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:

      - name: backend

        image: saurabh7830/vendor-invoice-backend:v1.0

        imagePullPolicy: Always

        ports:
        - containerPort: 8000


        resources:

          requests:
            cpu: "250m"
            memory: "512Mi"

          limits:
            cpu: "500m"
            memory: "1Gi"


        readinessProbe:

          httpGet:
            path: /docs
            port: 8000

          initialDelaySeconds: 10
          periodSeconds: 10


        livenessProbe:

          httpGet:
            path: /docs
            port: 8000

          initialDelaySeconds: 30
          periodSeconds: 20
