kubernetes/frontend-service.yaml
apiVersion: v1

kind: Service


metadata:

  name: frontend-service

  namespace: vendor-invoice



spec:

  selector:

    app: vendor-frontend



  ports:

  - port: 80

    targetPort: 80



  type: ClusterIP
