kubernetes/postgres-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: postgres
  namespace: vendor-invoice


spec:

  selector:
    app: postgres


  ports:

  - port: 5432
    targetPort: 5432


  type: ClusterIP
